--- a/client/maketea.css
+++ b/client/maketea.css
@@ -1,20 +1,22 @@
-@font-face {
-  /*http://jailmake.com/wp-content/themes/jail_2_2/JAILcopy.ttf*/
-  font-family: JAILcopy;
-  src: url(/JAILcopy.ttf);
-}
-
 body {
-  font-family: JAILcopy, "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  background: #EEE;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: lighter;
+  background: #fff;
+  color: #444;
+  margin: 0;
+  padding: 10px 30px;
+}
+h1 {
+  font-weight: lighter;
 }
 header{
-  background: rgb(24,49,96);
-  margin-bottom:10px;
+  background: #0095A4;
+  margin: 0 -20px 10px;
+  border-radius: 3px;
 }
 header h1{
   display: inline-block;
-  padding:10px 5px;
+  padding: 20px;
   color: white;
   margin:0;
   vertical-align: middle;
@@ -24,33 +26,36 @@ header h1 img {
 }
 header nav {
   display: inline-block;
-  vertical-align: middle;
 }
 header nav a {
   text-decoration: none;
   font-size: 24px;
-  padding: 10px;
+  margin-right: 5px;
+  padding: 8px 10px;
   color: white;
+  border-radius: 3px;
+  background-color: #0095A4;
+  transition: background-color 0.25s ease-in;
 }
 header nav a span {
   display: inline;
 }
 header nav a:hover {
-  color: rgb(24,49,96);
+  color: #0095A4;
   background-color: white;
 }
-#chef {
-  color: rgb(24,49,96);
+#brew-master {
+  color: #0095A4;
 }
 .card {
-  background: rgb(24,49,96);
+  background: #0095A4;
   color: white;
   display: inline-block;
-  padding: 4px;
+  padding: 0 5px 5px 5px;
   margin: 0 4px 10px 0;
-  border:solid 1px #333;
   /*box-shadow: 2px 2px 10px rgba(0,0,0,0.2);*/
   opacity: 1;
+  border-radius: 3px;
 }
 .card.out{
   opacity: 0.5;
@@ -66,10 +71,11 @@ header nav a:hover {
   overflow: hidden;
   margin-bottom: 7px;
   vertical-align: middle;
+  border-radius: 3px;
 }
 .photoFrame img{
   min-width: 250px;
-  max-width: 400px;
+  max-width: 100%;
 }
 table .photoFrame{
   width:80px;
@@ -78,7 +84,6 @@ table .photoFrame{
 }
 table .photoFrame img{
   min-width: 80px;
-  max-width: 128px;
 }
 .card .stats{
   background: white;
@@ -111,7 +116,7 @@ table .photoFrame img{
   margin:2em 0;
 }
 .form-group label {
-  font-size: 2em;
+  font-size: 1.75em;
   margin: 0 0 4px;
   display: block;
 }
@@ -123,15 +128,20 @@ table .photoFrame img{
   padding: 6px 12px;
   font-size: 20px;
   line-height: 1.5;
-  color: white;
-  background-color: rgb(24,49,96);
+  color: #444;
+  background-color: #d2ecef;
   box-shadow: none;
-  border: none;
+  border: 1px solid #0095A4;
+  border-radius: 3px;
+}
+.select2-container-multi .select2-choices .select2-search-field input.select2-input {
+  border: 0;
 }
 input[type="text"].form-control,
 input[type="url"].form-control,
 input[type="number"].form-control,
-input[type="date"].form-control{
+input[type="date"].form-control,
+input[type="time"].form-control {
   padding:1px 10px;
 }
 .btn {
@@ -155,8 +165,8 @@ input[type="date"].form-control{
   user-select: none;
 }
 
-.form-group.guests,
-.form-group.date {
+.form-group.date,
+.form-group.time {
   display: inline-block;
   width:49%;
   margin: 0;
@@ -188,7 +198,7 @@ input[type="date"].form-control{
   -webkit-box-shadow: none;
 }
 .select2-drop {
-  background-color: rgba(24,49,96,0.9);
+  background-color: #0095A4;
   border: none;
   border-top: 1px solid white;  
   padding: 6px;
@@ -208,13 +218,13 @@ input[type="date"].form-control{
 .select2-container-multi .select2-choices .select2-search-choice {
   background: transparent;
   border: none;
-  color: white;
+  color: #444;
   box-shadow: none;
   padding: 10px 0 10px 24px;
 }
 .select2-search-choice-close {
   display: block;
-  color: white;
+  color: #444;
   position: absolute;
   right: 3px;
   top: 5px;
